[gd_scene load_steps=36 format=3 uid="uid://df5dftulja42v"]

[ext_resource type="Script" path="res://Scripts/Actors/Player.gd" id="1_pwxxx"]
[ext_resource type="PackedScene" uid="uid://bdiyfgq02cvwy" path="res://Scenes/Actors/Components/actor_sprite.tscn" id="2_nljli"]
[ext_resource type="Texture2D" uid="uid://bnq013qp5qv0v" path="res://Assets/Textures/Actors/Player/Character_48x48_2.png" id="3_3rkvg"]
[ext_resource type="Script" path="res://Scripts/BaseClasses/ModuleManager.gd" id="3_ieijs"]
[ext_resource type="Script" path="res://Scripts/Modules/module_behaviour.gd" id="4_4kw1u"]
[ext_resource type="Script" path="res://Scripts/BaseClasses/Combat/hit_box.gd" id="4_svcyd"]
[ext_resource type="PackedScene" uid="uid://cd0fovjuf581s" path="res://Scenes/Modules/Behaviour/Packs/Player/behaviour-pack_movement.tscn" id="5_sx5gr"]
[ext_resource type="Script" path="res://Scripts/Modules/module_terrain_tracker.gd" id="6_sbij3"]
[ext_resource type="Script" path="res://Scripts/Modules/module_timers_manager.gd" id="7_d17gd"]
[ext_resource type="PackedScene" uid="uid://gu27l7pwfy2s" path="res://Scenes/Modules/Behaviour/Packs/Player/behaviour_pack_combat.tscn" id="8_178i0"]
[ext_resource type="Script" path="res://Scripts/Modules/module_animation_player.gd" id="8_gt0kb"]
[ext_resource type="PackedScene" uid="uid://ergcsbjtx8h5" path="res://Scenes/StateMachines/player_anim_fsm.tscn" id="9_q6u2g"]
[ext_resource type="Script" path="res://Scripts/Modules/module_gravity.gd" id="10_1o7wi"]
[ext_resource type="Script" path="res://Scripts/Modules/ModuleInteraction.gd" id="11_051nj"]
[ext_resource type="Script" path="res://Scripts/BaseClasses/state_machine_controller.gd" id="11_een1p"]
[ext_resource type="Script" path="res://Scripts/Modules/module_stats.gd" id="12_utxm4"]
[ext_resource type="Script" path="res://Scripts/BaseClasses/component_stat.gd" id="13_x20mx"]
[ext_resource type="Script" path="res://Scripts/Components/stat_progress_bar.gd" id="15_p2nnr"]
[ext_resource type="Texture2D" uid="uid://b8s5athuxem6n" path="res://Assets/Textures/UI/HUD/bar_fill.png" id="17_hjugg"]
[ext_resource type="Texture2D" uid="uid://djk7aht017mdr" path="res://Assets/Textures/UI/HUD/bar_over.png" id="18_kli7j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3l8r1"]
size = Vector2(12, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2le28"]
size = Vector2(12, 4)

[sub_resource type="GDScript" id="GDScript_84agl"]
resource_name = "player_hurt_box"
script/source = "extends HurtBox


func _hit() -> void:
	if 0.3 < invincibility_time:
		sprite.play_effect(ActorSprite2D.EffectType.BLINK, invincibility_time)

"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mrg70"]
size = Vector2(12, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_reyvg"]
size = Vector2(2, 2)

[sub_resource type="Animation" id="Animation_lkhnf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ActorSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4ubn3"]
resource_name = "damage"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ActorSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [29, 30, 31, 32]
}

[sub_resource type="Animation" id="Animation_jf1pk"]
resource_name = "death"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ActorSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [33, 34, 35, 36, 37, 38, 39, 40, 41, 42]
}

[sub_resource type="Animation" id="Animation_jelgw"]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ActorSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [28]
}

[sub_resource type="Animation" id="Animation_ym4cv"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ActorSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_05th0"]
resource_name = "jump"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ActorSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [26, 27]
}

[sub_resource type="Animation" id="Animation_d1bbf"]
resource_name = "punch"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ActorSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.25, 0.35, 0.45, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [43, 44, 45, 46, 47, 49, 50]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../HitBox/HitCollisionShape:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.25),
"transitions": PackedFloat32Array(0, 0, 0),
"update": 0,
"values": [Vector2(0, 0), Vector2(15.5, -16.5), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../HitBox/HitCollisionShape:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.25),
"transitions": PackedFloat32Array(0, 0, 0),
"update": 0,
"values": [Vector2(2, 2), Vector2(14, 6), Vector2(2, 2)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../HitBox/HitCollisionShape")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.05, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [&"disabled", true],
"method": &"set_deferred"
}, {
"args": [&"disabled", false],
"method": &"set_deferred"
}, {
"args": [&"disabled", true],
"method": &"set_deferred"
}]
}

[sub_resource type="Animation" id="Animation_3c5ef"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ActorSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23, 24, 25]
}

[sub_resource type="Animation" id="Animation_t05fn"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ActorSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xp0ma"]
_data = {
"RESET": SubResource("Animation_lkhnf"),
"damage": SubResource("Animation_4ubn3"),
"death": SubResource("Animation_jf1pk"),
"fall": SubResource("Animation_jelgw"),
"idle": SubResource("Animation_ym4cv"),
"jump": SubResource("Animation_05th0"),
"punch": SubResource("Animation_d1bbf"),
"run": SubResource("Animation_3c5ef"),
"walk": SubResource("Animation_t05fn")
}

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("actor_sprite", "module_manager", "hurt_box")]
collision_layer = 0
collision_mask = 5
script = ExtResource("1_pwxxx")
actor_name = "Ketei"
actor_type = 1
actor_sprite = NodePath("ActorSprite")
module_manager = NodePath("ModuleManager")
run_speed = 13.0
walk_speed = 6.5
acceleration = 0.3
friction = 0.15
climb_base_speed = 1.0
crouch_speed = 2.0
jump_height = 5.6
time_to_floor = 0.38
time_to_peak = 0.45
air_acceleration = 0.45
air_friction = 1.0
hurt_box = NodePath("HurtBox")

[node name="ActorSprite" parent="." instance=ExtResource("2_nljli")]
position = Vector2(0, -16)
texture = ExtResource("3_3rkvg")
hframes = 5
vframes = 11

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, 0, 5, 0, 6, -1, 6, -23, 4, -27, 0, -27, -4, -27, -6, -23, -6, -1, -5, 0)

[node name="RayCastCenter" type="RayCast2D" parent="."]
position = Vector2(0, -16)
target_position = Vector2(0, 18)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(-5, -16)
target_position = Vector2(0, 18)

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(5, -16)
target_position = Vector2(0, 18)

[node name="GroundTerrain" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundTerrain"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_3l8r1")

[node name="MiddleTerrain" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MiddleTerrain"]
position = Vector2(0, -18)
shape = SubResource("RectangleShape2D_2le28")

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("module_stats", "sprite")]
script = SubResource("GDScript_84agl")
module_stats = NodePath("../ModuleManager/ModuleStats")
sprite = NodePath("../ActorSprite")
invincibility_time = 2.5

[node name="HurtCollisionShape" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -13.5)
shape = SubResource("RectangleShape2D_mrg70")
debug_color = Color(0, 0.584314, 0.235294, 0.419608)

[node name="HitBox" type="Area2D" parent="." node_paths=PackedStringArray("sprite", "collision_shape")]
script = ExtResource("4_svcyd")
sprite = NodePath("../ActorSprite")
flip_with_sprite = true
collision_shape = NodePath("HitCollisionShape")
hit_enemies = true
hit_objects = true

[node name="HitCollisionShape" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_reyvg")
disabled = true
debug_color = Color(0.870588, 0, 0.0862745, 0.419608)

[node name="ModuleManager" type="Node" parent="." node_paths=PackedStringArray("parent_node")]
script = ExtResource("3_ieijs")
parent_node = NodePath("..")
move_and_slide = true

[node name="ModuleBehaviour" type="Node" parent="ModuleManager" node_paths=PackedStringArray("default_pack")]
script = ExtResource("4_4kw1u")
default_pack = NodePath("BehaviourPack-Movement")

[node name="BehaviourPack-Movement" parent="ModuleManager/ModuleBehaviour" instance=ExtResource("5_sx5gr")]

[node name="BehaviourPack-Combat" parent="ModuleManager/ModuleBehaviour" instance=ExtResource("8_178i0")]

[node name="ModuleTerrainTracker" type="Node" parent="ModuleManager" node_paths=PackedStringArray("raycast_left", "raycast_center", "raycast_right", "ground_collision", "middle_collision")]
script = ExtResource("6_sbij3")
raycast_left = NodePath("../../RayCastLeft")
raycast_center = NodePath("../../RayCastCenter")
raycast_right = NodePath("../../RayCastRight")
ground_collision = NodePath("../../GroundTerrain")
middle_collision = NodePath("../../MiddleTerrain")

[node name="ModuleTimersManager" type="Node" parent="ModuleManager"]
script = ExtResource("7_d17gd")

[node name="ModuleAnimationPlayer" type="AnimationPlayer" parent="ModuleManager" node_paths=PackedStringArray("state_machine", "machine_controller")]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_xp0ma")
}
script = ExtResource("8_gt0kb")
state_machine = NodePath("Root")
machine_controller = NodePath("AnimSMController")

[node name="Root" parent="ModuleManager/ModuleAnimationPlayer" instance=ExtResource("9_q6u2g")]

[node name="AnimSMController" type="Node" parent="ModuleManager/ModuleAnimationPlayer" node_paths=PackedStringArray("state_machine")]
script = ExtResource("11_een1p")
state_machine = NodePath("../Root")
state_arguments = {
"damage": {
"root": "damage"
},
"fall": {
"root/air/movement": "fall"
},
"idle": {
"root/ground/movement": "idle"
},
"jump": {
"root/air/movement": "jump"
},
"run": {
"root/ground/movement": "run"
},
"walk": {
"root/ground/movement": "walk"
}
}

[node name="ModuleGravity" type="Node" parent="ModuleManager" node_paths=PackedStringArray("target_actor")]
script = ExtResource("10_1o7wi")
target_actor = NodePath("../..")
terminal_velocity = 27.0
low_grav_slowdown = 1.0

[node name="ModuleInteract" type="Node" parent="ModuleManager" node_paths=PackedStringArray("animation_player", "terrain_tracker")]
script = ExtResource("11_051nj")
animation_player = NodePath("../ModuleAnimationPlayer")
terrain_tracker = NodePath("../ModuleTerrainTracker")

[node name="ModuleStats" type="Node" parent="ModuleManager"]
script = ExtResource("12_utxm4")

[node name="Health" type="Node" parent="ModuleManager/ModuleStats"]
script = ExtResource("13_x20mx")
stat_name = "health"
current_value = 100.0
_max_value = 100.0
value_rounding = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -32)
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="HUD" type="CanvasLayer" parent="."]

[node name="HealthBar" type="TextureProgressBar" parent="HUD" node_paths=PackedStringArray("measured_stat")]
offset_left = 24.0
offset_top = 8.0
offset_right = 104.0
offset_bottom = 16.0
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 3
stretch_margin_bottom = 3
texture_under = ExtResource("17_hjugg")
texture_over = ExtResource("18_kli7j")
texture_progress = ExtResource("17_hjugg")
tint_under = Color(0.294118, 0.0666667, 0.0470588, 1)
tint_over = Color(0, 0, 0, 1)
tint_progress = Color(0.619608, 0.137255, 0.113725, 1)
script = ExtResource("15_p2nnr")
measured_stat = NodePath("../../ModuleManager/ModuleStats/Health")
show_numbers = true
enable_tweening = true
tween_time = 2.0
tween_transition = 3
tween_ease = 1
